testing/tests/ui/filter_block_ws.stderr
error: the previous template error derives from
 --> tests/ui/filter_block_ws.rs:4:12
  |
4 | #[template(source = "{% filter lower|indent(2) - %}
  |            ^^^^^^
